<resources>
    <string name="app_name">News</string>
    <string name="start">开始体验</string>
    <!--<string name="home">主页</string>-->
    <string name="news">新闻</string>
    <string name="shop">商城</string>
    <!--<string name="shopcar">购物车</string>-->
    <string name="setting">设置</string>
    <string name="theme">专题</string>
    <string name="images">组图</string>
    <string name="action">互动</string>
    E
    <string name="vote">投票</string>
    <string name="refresh_time">刷新时间</string>
    <!--<string name="edit">编辑</string>-->
    <!--<string name="check_all">全选</string>-->
    <string name="count">总额</string>
    <string name="account">结算</string>
    <string name="goods_message">商品</string>
    <string-array name="font">
        <item>small</item>
        <item>xsmall</item>
        <item>normal</item>
        <item>large</item>
        <item>xlarge</item>


    </string-array>
    <string-array name="images">
        <item>一分图</item>
        <item>二分图</item>
        <item>四分图</item>

    </string-array>
    <string name="main_message">消息</string>
    <string name="main_search">搜索</string>
    <string name="home">首页</string>
    <string name="type">分类</string>
    <string name="find">发现</string>
    <string name="shopcar">购物车</string>
    <string name="personal">个人中心</string>
    <string name="seck_distance">今日距离*还有</string>
    <string name="find_more">查看更多</string>
    <string name="new_day_groom">今日新品推荐</string>
    <!--<string name="goods_message">商品详细信息</string>-->
    <string name="it_more">更多</string>
    <string name="it_share">分享</string>
    <string name="it_search">搜索</string>
    <string name="goods_atguigu">由尚硅谷发货</string>
    <string name="goods_offer">选择付款方式</string>
    <string name="remain">请注意付款安全</string>
    <string name="relaction_user">联系客服</string>
    <string name="collectioned">收藏</string>
    <string name="addcar">加入购物车</string>
    <string name="empty">这里什么商品都没有</string>
    <string name="btn_empty">去逛逛</string>
    <string name="check_all">全选</string>
    <!--<string name="count"/>-->
    <!--<string name="account">结算</string>-->
    <!--<string name="edit">编辑</string>-->
    <string name="delete">删除</string>
    <string name="complish">完成</string>
    <string name="hot_goods">热卖商品</string>
    <string name="ordernary_goods">普通商品</string>
    <string name="community">社区</string>
    <string name="hot">热门</string>
    <string name="top">置顶</string>
    <string name="elite">精华</string>
    <string name="nodoult">确定</string>
    <string name="send">发送</string>
    <string name="login">登录</string>
    <string name="myorder">我的订单</string>
    <string name="allorder">全部订单</string>
    <string name="waitoffer">待付款</string>
    <string name="address">收货地址</string>
    <string name="mycollection">我的收藏</string>
    <string name="balence">我的优惠券</string>
    <string name="ticket">我的电子票</string>
    <string name="score">我的瓜子</string>
    <string name="prize">我的奖品</string>
    <string name="invitation">我的邀请</string>
    <string name="feedback">客服中心</string>
    <string name="service">反馈</string>
    <string name="zhanghao">账号:</string>
    <string name="password">密码:</string>
    <string name="protocol"><![CDATA[点击查看<<陈蓉发>>协议]]></string>
    <string name="remember">忘记密码</string>
    <string name="register">注册</string>
    <string name="other">分享</string>
    <string name="edit">编辑</string>
    <string name="images_visit">图片浏览</string>
    <string name="click_come">点击登录</string>
    <string name="mymessage">我的消息</string>
    <string name="myFocus">我的关注</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_discuss">我的评论</string>
    <string name="my_reply">投诉反馈</string>
    <string-array name="setting">
        <item>@string/mymessage</item>
        <item>@string/myFocus</item>
        <item>@string/my_collection</item>
        <item>@string/my_discuss</item>
        <item>@string/my_reply</item>

    </string-array>
</resources>
